[tool.poetry]
name = "invoice-manager"
version = "0.66.0"
description = ""
authors = ["Wioletta Wajda <wioletta.wajda@devsoft.pl>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.12.7"
django = "^5.1.3"
celery = "^5.4.0"
django-environ = "0.11.2"
djangorestframework = "^3.15.2"
black = "24.10.0"
isort = "^5.13.2"
django-filter = "24.3"
django-extensions = "^3.2.3"
xhtml2pdf = "0.2.16"
num2words = "^0.5.13"
pytest-django = "^4.9.0"
coverage = "^7.6.8"
factory-boy = "^3.3.1"
requests = "2.32.3"
redis = "5.2.0"
parameterized = "^0.9.0"
django-factory-boy-generator = "^1.0.4"
django-cors-headers = "^4.6.0"
django-storages = "^1.14.4"
gunicorn = "23.0.0"
psycopg = "^3.2.3"
jinja2 = "3.1.4"
sentry-sdk = "^2.19.0"
flake8 = "^7.1.1"
boto3 = "^1.35.73"
uvicorn = "^0.32.1"
python-bidi = "0.6.3"
cryptography = "43.0.3"

[tool.poetry.group.semver.dependencies]
python-semantic-release = "^9.8.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''

(
  /(
    | \.git
    | migrations
    | venv
    | \.env
  )/
)
'''

[tool.isort]
skip = [".git", "migrations", "venv", ".env"]
profile = "black"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
commit_message = "chore(release): {version}"
tag_format = "{version}"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false
prerelease_token = "beta"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "revert"]
minor_tags = ["feat"]
patch_tags = ["build", "chore", "ci", "fix", "perf", "style", "refactor", "revert"]


[changelog.default_templates.changelog_file]
template_dir = "semantic_template"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = ["build", "chore", "ci", "docs", "perf", "refactor", "revert", "style"]

[tool.semantic_release.remote]
name = "origin"
type = "github"
